Fri Aug  7 23:36:07 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): need select for WAIT_SELECT, even if
	  already timeout.  [ruby-dev:38971]
	  (WAIT_DONE): defined for mark threads which can be runnable.

Fri Aug  7 20:18:21 2009  Tanaka Akira  <akr@fsij.org>

	* ext/digest/sha2/sha2.h: include inttypes.h for uint32_t, etc.

	* ext/digest/sha2/extconf.rb: check inttypes.h.

Fri Aug  7 02:03:48 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.[ch]: Update to 1.0 RELEASE which fixes an
	  off-by-one bug in SHA-256 hashing.  Reduce differences from
	  the original while at it. [Bug #1799]

Fri Aug  7 02:00:06 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/*/extconf.rb: inttypes.h and unistd.h need not be
	  checked here. [ruby-dev:39032]

Fri Aug  7 01:55:10 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/digest/sha2/lib/sha2.rb: should require sha2.so.

Fri Aug  7 01:04:17 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb (search_tclConfig): fix logic bug.

Thu Aug  6 09:06:39 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): refine previous change.

Thu Aug  6 01:28:53 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): fix condition for making thread
	  runnable.  [ruby-core:23515]

Wed Aug  5 12:54:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_exc_raise, rb_exc_fatal): require exception object.
	  [ruby-core:24767]

Wed Aug  5 12:46:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval): does not restore old errinfo when fatal error.

	* eval.c (rb_longjmp): reset raised flag before fatal error.

Wed Aug  5 00:31:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_c.rb: fixed a small error in the
	  documentation.  [ruby-core:24744]

Tue Aug  4 22:15:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (has_redirection): need to execute shell if commandline
	  includes newline.  cf. [ruby-core:24560]